# DitherMe

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  app.py  build.sh  index.html  package.json  pnpm-lock.yaml  requirements.txt  setup.py  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
DitherMe/: __main__.py  algorithms.py  app.py  processor.py
DitherMe/algorithms/: __init__.py  atkinson.c  bayer_2x2.c  bayer_4x4.c  bayer_8x8.c  burkes.c  checkered_large.c  checkered_medium.c  checkered_small.c  clustered_dot_4x4.c  false_floydsteinberg.c  floydsteinberg.c  image_utils.c  image_utils.h  jarvis_judice_ninke.c  knoll.c  lattice_boltzmann.c  sierra.c  sierra_lite.c  sierra_two_row.c  stevenson_arce.c  stucki.c
DitherMe/ui/: __init__.py  button.py  progress_bar.py  slider.py
assets/: build.yaml  generate-icon.sh  icon.icns
crates/dither_core/: Cargo.toml
crates/dither_core/examples/: bench.rs  compare.rs  debug_case.rs
crates/dither_core/src/: algorithms.rs  lib.rs  pipeline.rs  settings.rs
ditherme-tauri/: Cargo.toml  README.md
ditherme-tauri/src/: App.svelte
ditherme-tauri/src/lib/: Slider.svelte
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
src/lib/: Slider.svelte  api.ts
