[package]
name = "ditherme"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "ditherme_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { workspace = true }
serde_json = { workspace = true }
image = { workspace = true }
dither_core = { path = "../crates/dither_core" }
